Fixed reff buff

--- a/public/404.html
+++ b/public/404.html
@@ -320,7 +320,7 @@
     </ul>
     
     <ul>
-      <li><a href="/publication/jacobson-2018-ecosphere/">A cross-scale trophic cascade from large predatory fish to algae in coastal ecosystems</a></li>
+      <li><a href="/publication/jacobson-2018-ecosphere/">Size-dependent prey availability affects diet and performanceof predatory fish at sea: a case study of Atlantic salmon</a></li>
     </ul>
     
     <ul>
