--- a/public/home/index.html
+++ b/public/home/index.html
@@ -658,7 +658,7 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0" itemprop="name">
-      <a href="/publication/jacobson-2018-ecosphere/" itemprop="url">A cross-scale trophic cascade from large predatory fish to algae in coastal ecosystems</a>
+      <a href="/publication/jacobson-2018-ecosphere/" itemprop="url">Size-dependent prey availability affects diet and performanceof predatory fish at sea: a case study of Atlantic salmon</a>
     </h3>
 
     
@@ -734,7 +734,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://royalsocietypublishing.org/doi/pdf/10.1098/rspb.2017.0045" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://esajournals.onlinelibrary.wiley.com/doi/epdf/10.1002/ecs2.2081" target="_blank" rel="noopener">
   PDF
 </a>
 
