--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -536,8 +536,8 @@
 
   </span>
   (2018).
-  <a href="/publication/jacobson-2018-ecosphere/" itemprop="name">A cross-scale trophic cascade from large predatory fish to algae in coastal ecosystems</a>.
-  <em>Ecosphere 10</em>(1).
+  <a href="/publication/jacobson-2018-ecosphere/" itemprop="name">Size-dependent prey availability affects diet and performanceof predatory fish at sea: a case study of Atlantic salmon</a>.
+  <em>Ecosphere 9</em>(1).
   
   <p>
 
@@ -554,7 +554,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://royalsocietypublishing.org/doi/pdf/10.1098/rspb.2017.0045" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://esajournals.onlinelibrary.wiley.com/doi/epdf/10.1002/ecs2.2081" target="_blank" rel="noopener">
   PDF
 </a>
 
