--- a/public/publication/jacobson-2018-ecosphere/index.html
+++ b/public/publication/jacobson-2018-ecosphere/index.html
@@ -118,7 +118,7 @@
   
   <meta property="og:site_name" content="Philip Jacobson">
   <meta property="og:url" content="/publication/jacobson-2018-ecosphere/">
-  <meta property="og:title" content="A cross-scale trophic cascade from large predatory fish to algae in coastal ecosystems | Philip Jacobson">
+  <meta property="og:title" content="Size-dependent prey availability affects diet and performanceof predatory fish at sea: a case study of Atlantic salmon | Philip Jacobson">
   <meta property="og:description" content=""><meta property="og:image" content="/publication/jacobson-2018-ecosphere/featured.jpg">
   <meta property="og:locale" content="en-us">
   
@@ -131,7 +131,7 @@
 
   
 
-  <title>A cross-scale trophic cascade from large predatory fish to algae in coastal ecosystems | Philip Jacobson</title>
+  <title>Size-dependent prey availability affects diet and performanceof predatory fish at sea: a case study of Atlantic salmon | Philip Jacobson</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#TableOfContents" data-offset="71" >
@@ -316,7 +316,7 @@
   <div class="row">
     <div class="col-6">
       <div class="split-header-content">
-        <h1 itemprop="name">A cross-scale trophic cascade from large predatory fish to algae in coastal ecosystems</h1>
+        <h1 itemprop="name">Size-dependent prey availability affects diet and performanceof predatory fish at sea: a case study of Atlantic salmon</h1>
 
         
 
@@ -440,7 +440,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="https://royalsocietypublishing.org/doi/pdf/10.1098/rspb.2017.0045" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://esajournals.onlinelibrary.wiley.com/doi/epdf/10.1002/ecs2.2081" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -473,7 +473,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=A%20cross-scale%20trophic%20cascade%20from%20large%20predatory%20fish%20to%20algae%20in%20coastal%20ecosystems&amp;url=%2fpublication%2fjacobson-2018-ecosphere%2f"
+         href="https://twitter.com/intent/tweet?text=Size-dependent%20prey%20availability%20affects%20diet%20and%20performanceof%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon&amp;url=%2fpublication%2fjacobson-2018-ecosphere%2f"
          target="_blank" rel="noopener">
         <i class="fab fa-twitter"></i>
       </a>
@@ -487,21 +487,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2fjacobson-2018-ecosphere%2f&amp;title=A%20cross-scale%20trophic%20cascade%20from%20large%20predatory%20fish%20to%20algae%20in%20coastal%20ecosystems"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2fjacobson-2018-ecosphere%2f&amp;title=Size-dependent%20prey%20availability%20affects%20diet%20and%20performanceof%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon"
          target="_blank" rel="noopener">
         <i class="fab fa-linkedin-in"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2fpublication%2fjacobson-2018-ecosphere%2f&amp;title=A%20cross-scale%20trophic%20cascade%20from%20large%20predatory%20fish%20to%20algae%20in%20coastal%20ecosystems"
+         href="http://service.weibo.com/share/share.php?url=%2fpublication%2fjacobson-2018-ecosphere%2f&amp;title=Size-dependent%20prey%20availability%20affects%20diet%20and%20performanceof%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon"
          target="_blank" rel="noopener">
         <i class="fab fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=A%20cross-scale%20trophic%20cascade%20from%20large%20predatory%20fish%20to%20algae%20in%20coastal%20ecosystems&amp;body=%2fpublication%2fjacobson-2018-ecosphere%2f">
+         href="mailto:?subject=Size-dependent%20prey%20availability%20affects%20diet%20and%20performanceof%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon&amp;body=%2fpublication%2fjacobson-2018-ecosphere%2f">
         <i class="fas fa-envelope"></i>
       </a>
     </li>
@@ -521,7 +521,7 @@
 </div>
 
 <div class="article-container d-xl-none">
-  <h1 itemprop="name">A cross-scale trophic cascade from large predatory fish to algae in coastal ecosystems</h1>
+  <h1 itemprop="name">Size-dependent prey availability affects diet and performanceof predatory fish at sea: a case study of Atlantic salmon</h1>
 
   
 
@@ -612,7 +612,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=A%20cross-scale%20trophic%20cascade%20from%20large%20predatory%20fish%20to%20algae%20in%20coastal%20ecosystems&amp;url=%2fpublication%2fjacobson-2018-ecosphere%2f"
+         href="https://twitter.com/intent/tweet?text=Size-dependent%20prey%20availability%20affects%20diet%20and%20performanceof%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon&amp;url=%2fpublication%2fjacobson-2018-ecosphere%2f"
          target="_blank" rel="noopener">
         <i class="fab fa-twitter"></i>
       </a>
@@ -626,21 +626,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2fjacobson-2018-ecosphere%2f&amp;title=A%20cross-scale%20trophic%20cascade%20from%20large%20predatory%20fish%20to%20algae%20in%20coastal%20ecosystems"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2fjacobson-2018-ecosphere%2f&amp;title=Size-dependent%20prey%20availability%20affects%20diet%20and%20performanceof%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon"
          target="_blank" rel="noopener">
         <i class="fab fa-linkedin-in"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2fpublication%2fjacobson-2018-ecosphere%2f&amp;title=A%20cross-scale%20trophic%20cascade%20from%20large%20predatory%20fish%20to%20algae%20in%20coastal%20ecosystems"
+         href="http://service.weibo.com/share/share.php?url=%2fpublication%2fjacobson-2018-ecosphere%2f&amp;title=Size-dependent%20prey%20availability%20affects%20diet%20and%20performanceof%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon"
          target="_blank" rel="noopener">
         <i class="fab fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=A%20cross-scale%20trophic%20cascade%20from%20large%20predatory%20fish%20to%20algae%20in%20coastal%20ecosystems&amp;body=%2fpublication%2fjacobson-2018-ecosphere%2f">
+         href="mailto:?subject=Size-dependent%20prey%20availability%20affects%20diet%20and%20performanceof%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon&amp;body=%2fpublication%2fjacobson-2018-ecosphere%2f">
         <i class="fas fa-envelope"></i>
       </a>
     </li>
@@ -686,7 +686,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="https://royalsocietypublishing.org/doi/pdf/10.1098/rspb.2017.0045" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://esajournals.onlinelibrary.wiley.com/doi/epdf/10.1002/ecs2.2081" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -750,7 +750,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9"><em>Ecosphere 10</em>(1)</div>
+          <div class="col-12 col-md-9"><em>Ecosphere 9</em>(1)</div>
         </div>
       </div>
       <div class="col-md-1"></div>
