--- a/public/publication/jacobson-2018-ecosphere/index.html
+++ b/public/publication/jacobson-2018-ecosphere/index.html
@@ -118,7 +118,7 @@
   
   <meta property="og:site_name" content="Philip Jacobson">
   <meta property="og:url" content="/publication/jacobson-2018-ecosphere/">
-  <meta property="og:title" content="Size-dependent prey availability affects diet and performanceof predatory fish at sea: a case study of Atlantic salmon | Philip Jacobson">
+  <meta property="og:title" content="Size-dependent prey availability affects diet and performance of predatory fish at sea: a case study of Atlantic salmon | Philip Jacobson">
   <meta property="og:description" content=""><meta property="og:image" content="/publication/jacobson-2018-ecosphere/featured.jpg">
   <meta property="og:locale" content="en-us">
   
@@ -131,7 +131,7 @@
 
   
 
-  <title>Size-dependent prey availability affects diet and performanceof predatory fish at sea: a case study of Atlantic salmon | Philip Jacobson</title>
+  <title>Size-dependent prey availability affects diet and performance of predatory fish at sea: a case study of Atlantic salmon | Philip Jacobson</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#TableOfContents" data-offset="71" >
@@ -316,7 +316,7 @@
   <div class="row">
     <div class="col-6">
       <div class="split-header-content">
-        <h1 itemprop="name">Size-dependent prey availability affects diet and performanceof predatory fish at sea: a case study of Atlantic salmon</h1>
+        <h1 itemprop="name">Size-dependent prey availability affects diet and performance of predatory fish at sea: a case study of Atlantic salmon</h1>
 
         
 
@@ -473,7 +473,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Size-dependent%20prey%20availability%20affects%20diet%20and%20performanceof%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon&amp;url=%2fpublication%2fjacobson-2018-ecosphere%2f"
+         href="https://twitter.com/intent/tweet?text=Size-dependent%20prey%20availability%20affects%20diet%20and%20performance%20of%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon&amp;url=%2fpublication%2fjacobson-2018-ecosphere%2f"
          target="_blank" rel="noopener">
         <i class="fab fa-twitter"></i>
       </a>
@@ -487,21 +487,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2fjacobson-2018-ecosphere%2f&amp;title=Size-dependent%20prey%20availability%20affects%20diet%20and%20performanceof%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2fjacobson-2018-ecosphere%2f&amp;title=Size-dependent%20prey%20availability%20affects%20diet%20and%20performance%20of%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon"
          target="_blank" rel="noopener">
         <i class="fab fa-linkedin-in"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2fpublication%2fjacobson-2018-ecosphere%2f&amp;title=Size-dependent%20prey%20availability%20affects%20diet%20and%20performanceof%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon"
+         href="http://service.weibo.com/share/share.php?url=%2fpublication%2fjacobson-2018-ecosphere%2f&amp;title=Size-dependent%20prey%20availability%20affects%20diet%20and%20performance%20of%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon"
          target="_blank" rel="noopener">
         <i class="fab fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Size-dependent%20prey%20availability%20affects%20diet%20and%20performanceof%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon&amp;body=%2fpublication%2fjacobson-2018-ecosphere%2f">
+         href="mailto:?subject=Size-dependent%20prey%20availability%20affects%20diet%20and%20performance%20of%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon&amp;body=%2fpublication%2fjacobson-2018-ecosphere%2f">
         <i class="fas fa-envelope"></i>
       </a>
     </li>
@@ -521,7 +521,7 @@
 </div>
 
 <div class="article-container d-xl-none">
-  <h1 itemprop="name">Size-dependent prey availability affects diet and performanceof predatory fish at sea: a case study of Atlantic salmon</h1>
+  <h1 itemprop="name">Size-dependent prey availability affects diet and performance of predatory fish at sea: a case study of Atlantic salmon</h1>
 
   
 
@@ -612,7 +612,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Size-dependent%20prey%20availability%20affects%20diet%20and%20performanceof%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon&amp;url=%2fpublication%2fjacobson-2018-ecosphere%2f"
+         href="https://twitter.com/intent/tweet?text=Size-dependent%20prey%20availability%20affects%20diet%20and%20performance%20of%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon&amp;url=%2fpublication%2fjacobson-2018-ecosphere%2f"
          target="_blank" rel="noopener">
         <i class="fab fa-twitter"></i>
       </a>
@@ -626,21 +626,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2fjacobson-2018-ecosphere%2f&amp;title=Size-dependent%20prey%20availability%20affects%20diet%20and%20performanceof%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2fjacobson-2018-ecosphere%2f&amp;title=Size-dependent%20prey%20availability%20affects%20diet%20and%20performance%20of%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon"
          target="_blank" rel="noopener">
         <i class="fab fa-linkedin-in"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2fpublication%2fjacobson-2018-ecosphere%2f&amp;title=Size-dependent%20prey%20availability%20affects%20diet%20and%20performanceof%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon"
+         href="http://service.weibo.com/share/share.php?url=%2fpublication%2fjacobson-2018-ecosphere%2f&amp;title=Size-dependent%20prey%20availability%20affects%20diet%20and%20performance%20of%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon"
          target="_blank" rel="noopener">
         <i class="fab fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Size-dependent%20prey%20availability%20affects%20diet%20and%20performanceof%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon&amp;body=%2fpublication%2fjacobson-2018-ecosphere%2f">
+         href="mailto:?subject=Size-dependent%20prey%20availability%20affects%20diet%20and%20performance%20of%20predatory%20fish%20at%20sea%3a%20a%20case%20study%20of%20Atlantic%20salmon&amp;body=%2fpublication%2fjacobson-2018-ecosphere%2f">
         <i class="fas fa-envelope"></i>
       </a>
     </li>
